--- a/src/Vts.SiteVisit/View/Application/Panels/MapView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MapView.xaml
@@ -7,7 +7,6 @@
     xmlns:input="clr-namespace:SLExtensions.Input;assembly=SLExtensions" 
     xmlns:Charts="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
     HorizontalAlignment="Left" VerticalAlignment="Top">
-
     <Grid Background="White" ShowGridLines="False">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -18,7 +17,7 @@
             <ColumnDefinition/>
             <ColumnDefinition MinWidth="450"/>
         </Grid.ColumnDefinitions>
-
+        <!-- Places the rho values on the map view -->
         <Grid Grid.Row="0" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition/>
@@ -28,41 +27,38 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="-rho_max" HorizontalAlignment="Left"/>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding Path=MainResource.Label_NegRhoMax, Source={StaticResource LocalizedStrings}}" HorizontalAlignment="Left"/>
             <TextBlock Grid.Row="0" Grid.Column="1" Text="0" HorizontalAlignment="Center"/>
-            <TextBlock Grid.Row="0" Grid.Column="2" Text="+rho_max" HorizontalAlignment="Right"/>
+            <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Path=MainResource.Label_PosRhoMax, Source={StaticResource LocalizedStrings}}" HorizontalAlignment="Right"/>
         </Grid>
-
+        <!-- Places the z values on the map view -->
         <Grid Grid.Row="1" Grid.Column="0" ShowGridLines="False">
             <Grid.RowDefinitions>
                 <RowDefinition Height="210"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="z=0" VerticalAlignment="Top" HorizontalAlignment="Right"/>
-            <TextBlock Grid.Row="1" Text="z_max" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+            <TextBlock Grid.Row="0" Text="{Binding Path=MainResource.Label_Z0, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+            <TextBlock Grid.Row="1" Text="{Binding Path=MainResource.Label_ZMax, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Top" HorizontalAlignment="Right"/>
         </Grid>
-
-        <StackPanel
-                Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center">
-            <Image 
-                    Height="225"
-                    Width="450"
-                    Source="{Binding Bitmap}" Stretch="Uniform" VerticalAlignment="Top" />
+        <!-- Map and the map options -->
+        <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center">
+            <Image Height="225"
+                   Width="450"
+                   Source="{Binding Bitmap}" Stretch="Uniform" VerticalAlignment="Top" />
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
-                    <TextBlock Text="Mean Depth: " Margin="0,3" VerticalAlignment="Bottom"/>
-                    <TextBox Text="{Binding YExpectationValue, Mode=OneWay, Converter={StaticResource myDoubleToStringConverter}, ConverterParameter=N3}" VerticalAlignment="Bottom" MinWidth="30"/>
-                    <TextBlock Text=" mm" Margin="0,3" VerticalAlignment="Bottom"/>
+                    <TextBlock Text="{Binding Path=MainResource.Label_MeanDepth, Source={StaticResource LocalizedStrings}}" Margin="0,0,5,0" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding YExpectationValue, Mode=OneWay, Converter={StaticResource myDoubleToStringConverter}, ConverterParameter=N3}" VerticalAlignment="Center" MinWidth="30"/>
+                    <TextBlock Text="{Binding Path=MainResource.Measurement_mm, Source={StaticResource LocalizedStrings}}" Margin="5,0,0,0" VerticalAlignment="Center"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="5">
-                    <TextBlock Text="Plot type: " VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding Path=MainResource.Label_PlotType, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,0,4,0" />
                     <v:RadioButtonOptionView DataContext="{Binding ScalingTypeOptionVM}" />
                 </StackPanel>
-
-                <CheckBox Content="Auto Scale" IsChecked="{Binding AutoScale, Mode=TwoWay}" Margin="5" VerticalAlignment="Center"/>
+                <CheckBox Content="{Binding Path=MainResource.Label_AutoScale, Source={StaticResource LocalizedStrings}}" IsChecked="{Binding AutoScale, Mode=TwoWay}" Margin="5,0,0,0" VerticalAlignment="Center"/>
             </StackPanel>
         </StackPanel>
-
+        <!--  -->
         <Grid Grid.Column="1" Grid.Row="2" Width="450" HorizontalAlignment="Center" VerticalAlignment="Top" ShowGridLines="False">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="225"/>
@@ -73,42 +69,28 @@
                 <RowDefinition MinHeight="30"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
+            <!-- Min and max values for the color map -->
             <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Margin="0,5" HorizontalAlignment="Left">
-                <TextBlock Text="Min: " VerticalAlignment="Bottom"/>
-                <TextBox Text="{Binding MinValue, Mode=TwoWay}" VerticalAlignment="Bottom"/>
+                <TextBlock Text="{Binding Path=MainResource.Label_Min, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,0,4,0" />
+                <TextBox Text="{Binding MinValue, Mode=TwoWay}" VerticalAlignment="Center"/>
             </StackPanel>
             <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,5" HorizontalAlignment="Right">
-                <TextBlock Text="Max: " VerticalAlignment="Bottom"/>
-                <TextBox Text="{Binding MaxValue, Mode=TwoWay}" VerticalAlignment="Bottom"/>
+                <TextBlock Text="{Binding Path=MainResource.Label_Max, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,0,4,0" />
+                <TextBox Text="{Binding MaxValue, Mode=TwoWay}" VerticalAlignment="Center"/>
             </StackPanel>
-
-            <Image 
-                    Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Top"
-                    Height="30" Width="450"
-                    Source="{Binding ColorBar}" Stretch="Fill" />
-
+            <!-- Color map image -->
+            <Image Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Top"
+                   Height="30" Width="450"
+                   Source="{Binding ColorBar}" Stretch="Fill" />
             <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3">
-
+                <!-- Color map dropdown -->
                 <v:ComboBoxOptionView DataContext="{Binding ColormapTypeOptionVM}" Margin="5,0,5,0"/>
-
-                <Button Content="Export As Image" Click="Button_Click" Margin="5,0,5,0"/>
-                
-                <Button 
-                        input:CommandService.Command="Maps_ExportDataToText"
+                <!-- Export buttons -->
+                <Button Content="{Binding Path=MainResource.Button_ExportImage, Source={StaticResource LocalizedStrings}}" Click="Button_Click" Margin="5,0,5,0"/>
+                <Button input:CommandService.Command="Maps_ExportDataToText"
                         input:CommandService.CommandParameter="{Binding}"
-                        Content="Export Data" Margin="5,0,5,0"/>
-
+                        Content="{Binding Path=MainResource.Button_ExportData, Source={StaticResource LocalizedStrings}}" Margin="5,0,5,0"/>
             </StackPanel>
         </Grid>
-
-        <!--<Rectangle Height="50" Width="300" >
-                        <Rectangle.Fill>
-                            <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
-                                <GradientStop Color="Black" Offset="0.0" />
-                                <GradientStop Color="White" Offset="1.0" />
-                            </LinearGradientBrush>
-                        </Rectangle.Fill>
-                    </Rectangle>-->
-
     </Grid>
 </UserControl>
