--- a/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/PlotView.xaml
@@ -40,15 +40,15 @@
             <!--  -->
             <StackPanel Orientation="Vertical" Margin="5,0,10,0">
                 <StackPanel Orientation="Horizontal" Margin="0">
-                    <TextBlock Text="X Axis Spacing: " VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding Path=MainResource.Label_XAxisSpacing, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                     <v:RadioButtonOptionView DataContext="{Binding XAxisSpacingOptionVM}" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0">
-                    <TextBlock Text="Y Axis Spacing: " VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding Path=MainResource.Label_YAxisSpacing, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center"/>
                     <v:RadioButtonOptionView DataContext="{Binding YAxisSpacingOptionVM}" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="0">
-                    <TextBlock Text="Normalization:" VerticalAlignment="Center" Margin="0,2"/>
+                    <TextBlock Text="{Binding Path=MainResource.Label_Normalization, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,2"/>
                     <v:RadioButtonOptionView DataContext="{Binding PlotNormalizationTypeOptionVM}" />
                 </StackPanel>
             </StackPanel>
@@ -56,16 +56,16 @@
             <StackPanel Orientation="Vertical" Margin="5,0,0,0">
                 <!-- Plot Label -->
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Plot Label:" VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding Path=MainResource.Label_PlotLabel, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" Margin="0,0,4,0" />
                     <TextBox Width="100" Text="{Binding CustomPlotLabel, Mode=TwoWay}"/>
                 </StackPanel>
                 <!-- Buttons for exporting results -->
-                <Button Content="Export As Image" 
+                <Button Content="{Binding Path=MainResource.Button_ExportImage, Source={StaticResource LocalizedStrings}}" 
                         Click="Button_Click"
                         Margin="0,5,0,0"/>
                 <Button input:CommandService.Command="Plot_ExportDataToText"
                         input:CommandService.CommandParameter="{Binding}"
-                        Content="Export Data"  
+                        Content="{Binding Path=MainResource.Button_ExportData, Source={StaticResource LocalizedStrings}}"  
                         Margin="0,5,0,0"/>
             </StackPanel>
         </StackPanel>
