--- a/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
+++ b/src/Vts.Gui.Silverlight/View/Application/Panels/SubPanels/SolutionDomainOptionView.xaml
@@ -76,27 +76,32 @@
         <!-- Independent Axis -->
         <!-- Choice for independent axis label, if necessary (invisible otherwise) -->
         <StackPanel Visibility="{Binding ConstantLabelVisible, Converter={StaticResource myBooleanToVisibilityConverter}}"
-                    Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" 
-                    LayoutUpdated="StackPanel_LayoutUpdated" Margin="3,1,0,0">
-            <TextBlock Text="{Binding Path=MainResource.Label_IndependentAxis, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                    Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left" 
+                    LayoutUpdated="StackPanel_LayoutUpdated" Margin="0,1,0,0">
+            <TextBlock Text="{Binding Path=MainResource.Label_IndependentAxis, Source={StaticResource LocalizedStrings}}" 
+                       VerticalAlignment="Center" HorizontalAlignment="Left"
+                       FontWeight="Bold"/>
             <!-- Radio button options -->
-            <v:RadioButtonOptionView DataContext="{Binding IndependentVariableAxisOptionVM}" 
+            <StackPanel Orientation="Horizontal" Margin="3,1,0,0">
+                <v:RadioButtonOptionView DataContext="{Binding IndependentVariableAxisOptionVM}" 
                                      VerticalContentAlignment="Center"
                                      VerticalAlignment="Center" HorizontalAlignment="Left"/>
-            <TextBlock Text="{Binding Path=MainResource.Label_At, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
-            <TextBlock Text="{Binding ConstantAxisLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0" />
-            <TextBlock Text="="  VerticalAlignment="Center" HorizontalAlignment="Left" Margin="1,0,1,0"/>
-            <TextBox Width="40" Text="{Binding ConstantAxisValue, Mode=TwoWay}"  VerticalAlignment="Center" HorizontalAlignment="Left" />
-            <TextBlock Text="{Binding ConstantAxisUnits}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0" KeyDown="TextBox_KeyDown"/>
-
-            <StackPanel Visibility="{Binding ConstantLabelTwoVisible, Converter={StaticResource myBooleanToVisibilityConverter}}"
-                    Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0">
                 <TextBlock Text="{Binding Path=MainResource.Label_At, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
-                <TextBlock Text="{Binding ConstantAxisTwoLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
+                <TextBlock Text="{Binding ConstantAxisLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0" />
                 <TextBlock Text="="  VerticalAlignment="Center" HorizontalAlignment="Left" Margin="1,0,1,0"/>
-                <TextBox Width="40" Text="{Binding ConstantAxisTwoValue, Mode=TwoWay}"  VerticalAlignment="Center" HorizontalAlignment="Left" KeyDown="TextBox_KeyDown"/>
-                <TextBlock Text="{Binding ConstantAxisTwoUnits}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0" />
+                <TextBox Width="40" Text="{Binding ConstantAxisValue, Mode=TwoWay}"  VerticalAlignment="Center" HorizontalAlignment="Left" />
+                <TextBlock Text="{Binding ConstantAxisUnits}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0" KeyDown="TextBox_KeyDown"/>
+
+                <StackPanel Visibility="{Binding ConstantLabelTwoVisible, Converter={StaticResource myBooleanToVisibilityConverter}}"
+                        Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0">
+                    <TextBlock Text="{Binding Path=MainResource.Label_At, Source={StaticResource LocalizedStrings}}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
+                    <TextBlock Text="{Binding ConstantAxisTwoLabel}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3,0,0,0" />
+                    <TextBlock Text="="  VerticalAlignment="Center" HorizontalAlignment="Left" Margin="1,0,1,0"/>
+                    <TextBox Width="40" Text="{Binding ConstantAxisTwoValue, Mode=TwoWay}"  VerticalAlignment="Center" HorizontalAlignment="Left" KeyDown="TextBox_KeyDown"/>
+                    <TextBlock Text="{Binding ConstantAxisTwoUnits}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0,0,0" />
+                </StackPanel>
             </StackPanel>
+            
 
         </StackPanel>
     </StackPanel>
